--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="shortcut icon" href="img/pesado.png" type="image/x-icon">
   <body>
-    <header>
+    <header class="header">
       <div class="contenedor">
         <div class="logo">
           <img src="img/fondo.png" alt="imagen de fondo">
@@ -51,6 +51,33 @@
                     She takes me away to that special place
                     And if I'd stare too long
                     I'd probably break down and cry</p>
+            </article> 
+
+            <article>
+              <h2>November rain</h2>
+              <img src="img/drummer.jpg" alt="bateria">
+             <iframe width="100" height="100" src="https://www.youtube.com/embed/8SbUC-UaAxE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <p>When I look into your eyes
+                I can see a love restrained
+                But darlin' when I hold you
+                Don't you know I feel the same
+                Nothin' lasts forever
+                And we both know hearts can change
+                And it's hard to hold a candle
+                In the cold November rain</p>
+            </article> 
+            <article>
+              <h2>knockin' on heavens door</h2>
+              <img src="img/drummer.jpg" alt="bateria">
+              <iframe width="100" height="100" src="https://www.youtube.com/embed/dmNlUnsWZOQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <p>Mama take this badge from me
+                I can't use it anymore
+                It's getting dark too dark to see
+                Feels like I'm knockin' on heaven's door
+                Knock-knock-knockin' on heaven's door
+                Knock-knock-knockin' on heaven's door
+                Knock-knock-knockin' on heaven's door
+                Knock-knock-knockin' on heaven's door, eh yeah</p>
             </article>
             
           </main>
