Se modifico el index otravez :v

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="contenido contenedor">
           <main>
             <article>
-              <h2>Hola Wey</h2>
+              <h2>Hola Wey.. que pex</h2>
               <img src="img/drummer.jpg" alt="imagen viajar a londres">
               <iframe width="100" height="100" src="https://www.youtube.com/embed/o1tj2zJ2Wvg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               <p>Welcome to the jungle we've got fun and games
